# accordion

./: .gitignore  cabal.project
accordion-base/: accordion-base.cabal
accordion-base/src/Accordion/: Base.hs  Internal.hs  Optionals.hs
accordion-base/src/Accordion/Base/: Signature.hsig
accordion-ecs/: accordion-ecs.cabal
accordion-ecs/src-deferred/: Deferred.hs
accordion-ecs/src-internal/Accordion/Ecs/: Types.hs
accordion-ecs/src/Accordion/: Ecs.hs
accordion-ecs/src/Accordion/Ecs/: Zeek.hs
accordion-ecs/test/: Main.hs
accordion-example/: accordion-example.cabal  example.html
accordion-example/src-complete/Accordion/: Complete.hs
accordion-example/src-universe/Accordion/Example/: FormImpl.hs  Types.hs  Universe.hs
accordion-example/src/Accordion/: Example.hs  FormExample.hs
accordion-form/: accordion-form.cabal
accordion-form-lucid/: accordion-form-lucid.cabal
accordion-form-lucid/src/Accordion/Form/: Lucid.hs  Parse.hs
accordion-form/src/Accordion/: Form.hs
accordion-form/src/Accordion/Form/: Signature.hsig
accordion-indefinite/: accordion-indefinite.cabal
accordion-indefinite-vector-unsafe/: accordion-indefinite-vector-unsafe.cabal
accordion-indefinite-vector-unsafe/src/: Extra.hsig
accordion-indefinite-vector-unsafe/src/Accordion/Vector/: Unsafe.hs
accordion-indefinite/src/Accordion/: Record.hs  Universe.hsig
accordion-json/: accordion-json.cabal
accordion-json-combinators/: accordion-json-combinators.cabal
accordion-json-combinators/src-indef/: Builder.hsig  Encoding.hs
accordion-json-combinators/src-internal/: Encode.hs
accordion-json-combinators/src-internal/Builder/: Bool.hs  Int.hs  Ip.hs  Word16.hs  Word64.hs  Word8.hs
accordion-json-combinators/src/Accordion/Json/: Encode.hs  Types.hs
accordion-json/src/Accordion/: Json.hs
accordion-json/src/Accordion/Json/: Signature.hsig
accordion-prefix-example/: CHANGELOG.md  accordion-prefix-example.cabal
accordion-prefix-example/src/: PrefixExample.hs
accordion-reloaded/: accordion-reloaded.cabal
accordion-reloaded/src-internal/Accordion/Example/: Types.hs  Universe.hs
accordion-reloaded/src/Accordion/: Example.hs
accordion-types/: accordion-types.cabal
accordion-types/src-indef/: Indefinite.hs
accordion-types/src/Accordion/: Nat.hs  Types.hs  Vector.hs  World.hs
accordion-types/src/Accordion/Binary/: N0.hs  N1.hs  N2.hs  N3.hs  N4.hs  N5.hs  N6.hs
accordion-types/src/Accordion/Fin/: N5.hs
accordion-types/src/Accordion/Gte/: N2.hs
accordion-types/src/Accordion/Types/: Form.hs
docs/: notes.md
playground/: playground.cabal
playground/src/: Playground.hs
regex/: regex.cabal
regex-bytestring/: regex-bytestring.cabal
regex-example/: regex-example.cabal
regex-indef/: Str.hsig  regex-indef.cabal
regex-types/: regex-types.cabal
str-bytestring/: str-bytestring.cabal
str-bytestring/Str/: ByteString.hs
str-string/: str-string.cabal
str-string/Str/: String.hs
