cabal-version: 2.2
name: accordion-base
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , indexed-array
    , primitive >= 0.6.4
  exposed-modules: Accordion.Base
  signatures: Accordion.Base.Signature
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
