cabal-version: 2.2
name: accordion-ecs
version: 0.1.0.0
build-type: Simple

library my-types
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , text
    , text-short
    , accordion-json-combinators
    , chronos
    , ip
    , tuples
  exposed-modules:
    Accordion.Ecs.Types
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src-internal

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-base
    , accordion-json
    , indexed-array
    , zeek-json
    , primitive >=0.7 && <0.8
    , chronos >=1.0.7 && <1.1
    , my-types
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Accordion.Ecs
    Accordion.Ecs.Zeek
  mixins:
    accordion-base (Accordion.Base as Accordion.Ecs.Base,
                    Accordion.Optionals as Accordion.Ecs.Optionals,
                    Accordion.Internal as Accordion.Ecs.Internal
                   )
      requires (Accordion.Base.Signature as Accordion.Ecs.Types),
    accordion-json (Accordion.Json as Accordion.Ecs.Json)
      requires (Accordion.Json.Signature as Accordion.Ecs.Types,
                Accordion.Base.Signature as Accordion.Ecs.Types),
