cabal-version: 2.2
name: accordion-ecs
version: 0.1.0.0
build-type: Simple

-- Provide Element to instantiate
library deferred
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , indexed-array
    , indexed-unboxed-array
  exposed-modules: Deferred
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src-deferred

library my-types
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , text
    , text-short
    , accordion-json-combinators
    , chronos
    , ip
    , tuples
  exposed-modules:
    Accordion.Ecs.Types
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src-internal

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-base
    , accordion-json
    , indexed-array
    , zeek-json
    , primitive >=0.7 && <0.8
    , chronos >=1.0.7 && <1.1
    , my-types
    , array-chunks
    , accordion-types
    , basics
    , deferred
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Accordion.Ecs
    Accordion.Ecs.Zeek
  mixins:
    accordion-base (Accordion.Base as Accordion.Ecs.Base,
                    Accordion.Optionals as Accordion.Ecs.Optionals,
                    Accordion.Internal as Accordion.Ecs.Internal
                   )
      requires (Accordion.Base.Signature as Accordion.Ecs.Types),
    accordion-json (Accordion.Json as Accordion.Ecs.Json)
      requires (Accordion.Json.Signature as Accordion.Ecs.Types,
                Accordion.Base.Signature as Accordion.Ecs.Types),
    deferred (Deferred as Deferred.Word64) requires (Element as Basics.Word64),
    deferred (Deferred as Deferred.Word16) requires (Element as Basics.Word16)

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base >=4.12.0.0 && <5
    , accordion-ecs
    , primitive
    , neat-interpolation
    , text-short
    , text
    , bytestring
    , zeek-json
    , json-tokenize
    , byteslice
    , indexed-array
    , accordion-types
    , array-chunks
