cabal-version: 2.2
name: accordion-form
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-indefinite
    , primitive >= 0.6.4
    , text
  exposed-modules:
    Accordion.Form
  signatures:
    Accordion.Form.Signature
    Accordion.Universe
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
