cabal-version: 2.2
name: accordion-indefinite-vector-unsafe
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-indefinite
    , primitive-checked >= 0.6.4
  exposed-modules: Accordion.Vector.Unsafe
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
