cabal-version: 2.2
name: accordion-indefinite
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , primitive >= 0.6.4
  exposed-modules: Accordion.Record
  signatures: Accordion.Universe
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
