cabal-version: 2.2
name: accordion-json-combinators
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , primitive >= 0.6.4
    , indexed-array
    , small-bytearray-builder
    , primitive-offset
    , accordion-types
    , tuples
    , text >= 1.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Accordion.Json.Types
    Accordion.Json.Encode
