cabal-version: 2.2
name: accordion-json
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-base
    , primitive-checked >=0.7
    , primitive-offset >=0.2
    , small-bytearray-builder
    , indexed-array
    , text
    , text-short >=0.1.1 && <0.2
    , byteslice >=0.1.1 && <0.2
    , bytestring
    , accordion-json-combinators
    , basics
  exposed-modules:
    Accordion.Json
  signatures:
    Accordion.Json.Signature
    Accordion.Base.Signature
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
