cabal-version: 2.2
name: accordion-json
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , accordion-base
    , accordion-json-combinators
    , accordion-types
    , base >= 4.11.1 && < 5
    , basics
    , byteslice >=0.1.1 && <0.2
    , bytestring
    , indexed-array
    , natural-arithmetic
    , primitive-checked >=0.7
    , primitive-offset >=0.2
    , small-bytearray-builder
    , text
    , text-short >=0.1.1 && <0.2
  exposed-modules:
    Accordion.Json
  signatures:
    Accordion.Json.Signature
    Accordion.Base.Signature
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
