cabal-version:       2.2
-- Initial package description 'accordion-prefix-example.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                accordion-prefix-example
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
-- copyright:
category:            Data
extra-source-files:  CHANGELOG.md

library
  exposed-modules: PrefixExample
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.12.0.0 && <5
    , accordion-types
  hs-source-dirs:      src
  default-language:    Haskell2010
