cabal-version: 2.2
name: accordion-reloaded
version: 0.1.0.0
build-type: Simple

library my-types
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , text
    , text-short
    , accordion-json-combinators
  exposed-modules:
    Accordion.Example.Universe
    Accordion.Example.Types
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src-internal

library
  build-depends:
    , base >= 4.11.1 && < 5
    , accordion-types
    , accordion-base
    , accordion-json
    , my-types
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Accordion.Example
  mixins:
    accordion-base (Accordion.Base as Accordion.Example.Base)
      requires (Accordion.Base.Signature as Accordion.Example.Universe),
    accordion-json (Accordion.Json as Accordion.Example.Json)
      requires (Accordion.Json.Signature as Accordion.Example.Universe,
                Accordion.Base.Signature as Accordion.Example.Universe),
