cabal-version: 2.2
name: accordion-types
version: 0.1.0.0
build-type: Simple

library
  build-depends:
    , base >= 4.11.1 && < 5
    , primitive-checked >= 0.6.4
    , primitive-indexed
    , text >= 1.2
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Accordion.Types.Form
    Accordion.Types
    Accordion.World
    Accordion.Nat
    Accordion.Fin.N5
    Accordion.Gte.N2
    Accordion.Vector
