cabal-version: 2.2
name: accordion-types
version: 0.1.0.0
build-type: Simple

-- You need to provide Element to instantiate this.
library indef
  build-depends:
    , base >= 4.11.1 && < 5
    , indexed-unboxed-array
    , indexed-array
    , small-bytearray-builder
    , primitive-offset
  exposed-modules: Indefinite
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src-indef

library
  build-depends:
    , base >= 4.11.1 && < 5
    , primitive >= 0.6.4
    , primitive-indexed
    , indexed-array
    , text >= 1.2
    , text-short
    , tuples
    , indef
    , basics
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  reexported-modules:
    , World.Bool
    , World.Word64
    , World.Word16
    , World.Int
  exposed-modules:
    Accordion.Types.Form
    Accordion.Types
    Accordion.World
    Accordion.Nat
    Accordion.Fin.N5
    Accordion.Binary.N0
    Accordion.Binary.N1
    Accordion.Binary.N2
    Accordion.Binary.N3
    Accordion.Binary.N4
    Accordion.Binary.N5
    Accordion.Binary.N6
    Accordion.Gte.N2
    Accordion.Vector
  mixins:
    indef (Indefinite as World.Word64) requires (Element as Basics.Word64),
    indef (Indefinite as World.Int) requires (Element as Basics.Int),
    indef (Indefinite as World.Word16) requires (Element as Basics.Word16),
    indef (Indefinite as World.Word8) requires (Element as Basics.Word8),
    indef (Indefinite as World.Word32) requires (Element as Basics.Word32),
    indef (Indefinite as World.Char) requires (Element as Basics.Char),
    indef (Indefinite as World.Bool) requires (Element as Basics.Bool)
